--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,65 @@ Lab1/vc140.pdb
 Lab1/ECE141L_01/Debug/Base_List.obj
 Lab1/ECE141L_01/.vs/ECE141L_01/v16/ipch/AutoPCH/84abebb60e106295/INT_LIST.ipch
 Lab1/ECE141L_01/Debug/Int_List.obj
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/Browse.VC.db
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/Browse.VC.db-shm
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/Browse.VC.db-wal
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/Browse.VC.opendb
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/ipch/AutoPCH/3d18720c1222aaf5/DOUBLYLINKEDLIST.ipch
+HW2/HCamacho_HW2/.vs/HCamacho_HW2/v16/ipch/AutoPCH/fd6e2f9218c0bec8/HCAMACHO_HW2.ipch
+Lab1/ECE141L_01/ECE_141L_Report_1.pdf
+Lab1/ECE141L_01/ECE141L_01.zip
+Lab1/ECE141_HW1/HCamacho_ECE141L2/HCamacho_ECE141L2.sln
+Lab1/ECE141_HW1/HCamacho_ECE141L2/HCamacho_ECE141L2.vcxproj
+Lab1/ECE141_HW1/HCamacho_ECE141L2/HCamacho_ECE141L2.vcxproj.filters
+Lab1/ECE141_HW1/HCamacho_ECE141L2/HCamacho_ECE141L2.vcxproj.user
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/vc142.pdb
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/vc142.idb
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/linkedList.obj
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.vcxproj.FileListAbsolute.txt
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.pdb
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.obj
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.log
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.ilk
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.exe.recipe
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho_ECE141L2.exe
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/link.write.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/link.read.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/link.command.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/HCamacho_ECE141L2.lastbuildstate
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/CL.write.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/CL.read.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/Debug/HCamacho.13b9b510.tlog/CL.command.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/6c282e34bbd5e052/QUEUE.ipch
+HW2/HCamacho_HW2/HCamacho_HW2.sln
+HW2/HCamacho_HW2/HCamacho_HW2.vcxproj
+HW2/HCamacho_HW2/HCamacho_HW2.vcxproj.filters
+HW2/HCamacho_HW2/HCamacho_HW2.vcxproj.user
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/.vs/HCamacho_ECE141_HW1_Q1/v16/.suo
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/.vs/HCamacho_ECE141_HW1_Q1/v16/Browse.VC.db
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/.vs/HCamacho_ECE141_HW1_Q1/v16/ipch/AutoPCH/b8debcc692807574/HCAMACHO_ECE141_HW1_Q1.ipch
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/CL.command.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/CL.read.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/CL.write.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/HCamacho_ECE141_HW1_Q1.lastbuildstate
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/link.command.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/link.read.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho.a18ac8be.tlog/link.write.1.tlog
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.exe
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.exe.recipe
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.ilk
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.log
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.obj
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.pdb
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/HCamacho_ECE141_HW1_Q1.vcxproj.FileListAbsolute.txt
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/vc142.idb
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/Debug/vc142.pdb
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/HCamacho_ECE141_HW1_Q1.sln
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/HCamacho_ECE141_HW1_Q1.vcxproj
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/HCamacho_ECE141_HW1_Q1.vcxproj.filters
+Lab1/ECE141_HW1/HCamacho_ECE141_HW1_Q1/HCamacho_ECE141_HW1_Q1.vcxproj.user
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/.suo
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/Browse.VC.db
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/1672c90ba8442bf4/HCAMACHO_ECE141L2.ipch
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/48c2c1710c51043f/SOURCE.ipch
+Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/4b5d8c21d56ceaa7/LINKEDLIST.ipch
