--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,58 @@ Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/Browse.VC.db
 Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/1672c90ba8442bf4/HCAMACHO_ECE141L2.ipch
 Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/48c2c1710c51043f/SOURCE.ipch
 Lab1/ECE141_HW1/HCamacho_ECE141L2/.vs/HCamacho_ECE141L2/v16/ipch/AutoPCH/4b5d8c21d56ceaa7/LINKEDLIST.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/.suo
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/Browse.VC.db
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/28f277ecef1c96bc/HCAMACHO_ECE141_HW3.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/41a45cb90f065a87/GRAPH.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/5b320a85b92784f/GRAPHTYPE.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/74a9c7da5ff7d4b3/LINKEDLISTTYPE.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/7fe3a3d810334771/LINKEDLISTITERATOR.ipch
+HW3/HCamacho_ECE141_HW3/.vs/HCamacho_ECE141_HW3/v16/ipch/AutoPCH/e053a80ae7658f3a/GRAPH.ipch
+HW3/HCamacho_ECE141_HW3/Debug/Graph.obj
+HW3/HCamacho_ECE141_HW3/Debug/graphType.obj
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/CL.command.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/CL.read.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/CL.write.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/HCamacho_ECE141_HW3.lastbuildstate
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/link.command.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/link.read.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho.e9003c35.tlog/link.write.1.tlog
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.exe.recipe
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.ilk
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.log
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.obj
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.pdb
+HW3/HCamacho_ECE141_HW3/Debug/HCamacho_ECE141_HW3.vcxproj.FileListAbsolute.txt
+HW3/HCamacho_ECE141_HW3/Debug/vc142.idb
+HW3/HCamacho_ECE141_HW3/Debug/vc142.pdb
+HW3/HCamacho_ECE141_HW3/HCamacho_ECE141_HW3.sln
+HW3/HCamacho_ECE141_HW3/HCamacho_ECE141_HW3.vcxproj
+HW3/HCamacho_ECE141_HW3/HCamacho_ECE141_HW3.vcxproj.filters
+HW3/HCamacho_ECE141_HW3/HCamacho_ECE141_HW3.vcxproj.user
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/.suo
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/Browse.VC.db
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/4a10bc3e44089360/MINPQ.ipch
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/7f1d7883c5f80022/UNIONFIND.ipch
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/8cf963be3333c7e1/COMPAREEDGE.ipch
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/f1a221d130573800/KRUSKALMST.ipch
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/f5ec06ba4101917/EDGEWEIGHTEDGRAPH.ipch
+HW4/HCamacho_ECE141_HW4/.vs/HCamacho_ECE141_HW4/v16/ipch/AutoPCH/fa1e11f9660d5018/HCAMACHO_ECE141_HW4.ipch
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/CL.command.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/CL.read.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/CL.write.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/HCamacho_ECE141_HW4.lastbuildstate
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/link.command.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/link.read.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho.0ee790d4.tlog/link.write.1.tlog
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.exe.recipe
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.ilk
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.log
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.obj
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.pdb
+HW4/HCamacho_ECE141_HW4/Debug/HCamacho_ECE141_HW4.vcxproj.FileListAbsolute.txt
+HW4/HCamacho_ECE141_HW4/Debug/UnionFind.obj
+HW4/HCamacho_ECE141_HW4/Debug/vc142.idb
+HW4/HCamacho_ECE141_HW4/Debug/vc142.pdb
+HW4/HCamacho_ECE141_HW4/HCamacho_ECE141_HW4.vcxproj.filters
+HW4/HCamacho_ECE141_HW4/HCamacho_ECE141_HW4.vcxproj.user
