created exam2 folder

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,54 @@ HW4/HCamacho_ECE141_HW4/Debug/vc142.idb
 HW4/HCamacho_ECE141_HW4/Debug/vc142.pdb
 HW4/HCamacho_ECE141_HW4/HCamacho_ECE141_HW4.vcxproj.filters
 HW4/HCamacho_ECE141_HW4/HCamacho_ECE141_HW4.vcxproj.user
+HW5/HCamacho_ECE141_HW5/HCamacho_ECE141_HW5.vcxproj.user
+HW5/HCamacho_ECE141_HW5/HCamacho_ECE141_HW5.vcxproj.filters
+HW5/HCamacho_ECE141_HW5/.vs/HCamacho_ECE141_HW5/v16/ipch/AutoPCH/e6dbc2cd407b96c7/INDEXMINPQ.ipch
+HW5/HCamacho_ECE141_HW5/.vs/HCamacho_ECE141_HW5/v16/ipch/AutoPCH/a77cf56cf9e067a6/IDXMINPQ.ipch
+HW5/HCamacho_ECE141_HW5/.vs/HCamacho_ECE141_HW5/v16/ipch/AutoPCH/4e3cb8bdc709532c/HCAMACHO_ECE141_HW5.ipch
+HW5/HCamacho_ECE141_HW5/.vs/HCamacho_ECE141_HW5/v16/Browse.VC.db
+HW5/HCamacho_ECE141_HW5/.vs/HCamacho_ECE141_HW5/v16/.suo
+Exam2/ECE141_HCamacho_Exam2_Q1/ECE141_HCamacho_Exam2_Q1.vcxproj.user
+Exam2/ECE141_HCamacho_Exam2_Q1/ECE141_HCamacho_Exam2_Q1.vcxproj.filters
+Exam2/ECE141_HCamacho_Exam2_Q1/ECE141_HCamacho_Exam2_Q1.vcxproj
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/vc142.pdb
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/vc142.idb
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/main.obj
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_HCamacho_Exam2_Q1.vcxproj.FileListAbsolute.txt
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_HCamacho_Exam2_Q1.pdb
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_HCamacho_Exam2_Q1.log
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_HCamacho_Exam2_Q1.ilk
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_HCamacho_Exam2_Q1.exe.recipe
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/link.write.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/link.read.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/link.command.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/ECE141_HCamacho_Exam2_Q1.lastbuildstate
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/CL.write.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/CL.read.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/Debug/ECE141_H.3012e2ea.tlog/CL.command.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/ipch/AutoPCH/bbe44f6fd2d2df4c/TST.ipch
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/ipch/AutoPCH/43315a4fc44cc33d/TST.ipch
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/ipch/AutoPCH/3d3ed63533a9a696/MAIN.ipch
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/Browse.VC.opendb
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/Browse.VC.db-wal
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/Browse.VC.db-shm
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/Browse.VC.db
+Exam2/ECE141_HCamacho_Exam2_Q1/.vs/ECE141_HCamacho_Exam2_Q1/v16/.suo
+Exam1/ECE141_HCamacho_Exam1/Debug/vc142.pdb
+Exam1/ECE141_HCamacho_Exam1/Debug/vc142.idb
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.pdb
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.obj
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.log
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.ilk
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_H.8cde2097.tlog/link.read.1.tlog
+Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/Browse.VC.db
+Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/.suo
+Exam1/ECE141_HCamacho_Exam1/Debug/vc142.pdb
+Exam1/ECE141_HCamacho_Exam1/Debug/vc142.idb
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.pdb
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.obj
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.log
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.ilk
+Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_H.8cde2097.tlog/link.read.1.tlog
+Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/Browse.VC.db
+Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/.suo
