finished exam2 p1 and p2-a

--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,28 @@ Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_HCamacho_Exam1.ilk
 Exam1/ECE141_HCamacho_Exam1/Debug/ECE141_H.8cde2097.tlog/link.read.1.tlog
 Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/Browse.VC.db
 Exam1/ECE141_HCamacho_Exam1/.vs/ECE141_HCamacho_Exam1/v16/.suo
+Exam2/ECE141_HCamacho_Exam2_Q2/ECE141_HCamacho_Exam2_Q2.vcxproj.user
+Exam2/ECE141_HCamacho_Exam2_Q2/ECE141_HCamacho_Exam2_Q2.vcxproj.filters
+Exam2/ECE141_HCamacho_Exam2_Q2/ECE141_HCamacho_Exam2_Q2.vcxproj
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/vc142.pdb
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/vc142.idb
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/main.obj
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_HCamacho_Exam2_Q2.vcxproj.FileListAbsolute.txt
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_HCamacho_Exam2_Q2.pdb
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_HCamacho_Exam2_Q2.log
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_HCamacho_Exam2_Q2.ilk
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_HCamacho_Exam2_Q2.exe.recipe
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/link.write.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/link.read.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/link.command.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/ECE141_HCamacho_Exam2_Q2.lastbuildstate
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/CL.write.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/CL.read.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/Debug/ECE141_H.c8e268b4.tlog/CL.command.1.tlog
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/ipch/AutoPCH/fc1bd93bc5a68b5b/R_WAYTRIE.ipch
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/ipch/AutoPCH/8add88b14d24e3ef/MAIN.ipch
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/Browse.VC.opendb
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/Browse.VC.db-wal
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/Browse.VC.db-shm
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/Browse.VC.db
+Exam2/ECE141_HCamacho_Exam2_Q2/.vs/ECE141_HCamacho_Exam2_Q2/v16/.suo
